# Rust_shooting

./: Cargo.toml
src/: main.rs
