[package]
name = "shooting"
version = "0.1.0"
authors = ["sushiyoshi"]
edition = "2018"

[dependencies]

piston_window = "0.89.0"
piston = "0.42.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.27.0"
piston2d-sprite = "0.50.0"
image = "0.21.0"
piston2d-drag_controller = "0.25.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
vecmath = "0.3.0"
camera_controllers = "0.27.0"
rand = "0.6.0"
shader_version = "0.3.0"
piston2d-graphics = "0.30.0"
pistoncore-glutin_window = "0.54.0"
piston2d-opengl_graphics = "0.59.0"
